--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.21",
-    "sass": "^1.39.0"
+    "sass": "^1.39.0",
+    "uuid": "^8.3.2"
   }
 }
